syntax = "proto3";

import "commons.proto";
import "google/protobuf/any.proto";

package results;


enum ReturnCode {
    MSG_FAILURE = 0;
    FAILURE = 1;
    IN_PROGRESS = 2;
    SUCCESS = 3;
    PENDING = 4;
}

message Result {
    google.protobuf.Any source_message=1;
    ReturnCode return_code=2;
    optional string error=3;
    optional commons.JsonContent return_value=4;
}
