/*
This .proto file contains protobuf message definitions for tests
*/
syntax = "proto3";
import "protobunny/commons.proto";

package tests;

enum Color {
  OFF = 0;
  GREEN = 1;
  ORANGE = 2;
  GREEN_ORANGE = 3;
  RED = 4;
  RED_GREEN = 5;
  RED_ORANGE = 6;
  RED_ORANGE_GREEN = 7;
}

message TestMessage {
  string content = 10;
  int64 number = 20;
  optional string detail=30;
  optional commons.JsonContent options=40;
  optional Color color=50;
}

message ComplexTestMessage {
  int64 x = 10;
  optional int64 y = 20;
  oneof group {
        bool a = 1;
        int32 b = 2;
        string c = 3;
  }
}
